--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h4{
 body{
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0,0,0,0.4)), url(https://s1.1zoom.me/big0/451/Hamburger_Tomatoes_French_fries_Knife_Black_576869_1280x853.jpg);
     background-repeat: no-repeat;
-    background-size: 175%;
+    background-size: 190%;
 }
 footer{
     background-color:rgb(255, 255, 0);
@@ -56,22 +56,46 @@ footer{
     margin-top: 6%;
     border-radius: 30px;
 }
-header{
-    margin:0;
+ul{
     background-color: yellow;
     height: 80px;
-    border-radius: 30px;
-    width: 900px;
+    width: 1309px;
 }
 li{
-    
+    text-transform: uppercase;
     display: inline-block;
-    list-style: no;
-    padding: 15px 15px;
+    list-style: none;
+    padding: 25px 25px;
     color: black;
     font-size: 20px;
     border-radius: 30px;
 }
 li:hover{
     color: red;
+}
+nav{
+    display: block;
+    float: none;
+}
+header{
+    position: static;
+    background:rgb(146, 179, 4);
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 5;
+}
+#lo1{
+    max-width: 100%;
+    height: auto;
+    margin-left: 37%;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: top;
+}
+h1{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 26px;
 }
